style.css
@import url("https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap");
@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;1,300&display=swap');

*,
::before,
::after {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

html {
  font-size: 62.5%;
}

body {
  min-height: 100vh;
  font-family: "Lato", sans-serif;
  background: whitesmoke;
  overflow: hidden;
}

.loader {
  position: fixed;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  background-color: rgba(256, 256, 256, 0.8);
  z-index: 20;
}

.loader img {
  position: fixed;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
}

h1 {
  font-family: "Press Start 2P", cursive;
  text-align: center;
  margin: 3rem 0;
  font-size: 3rem;
  letter-spacing: 0.5rem;
  text-transform: uppercase;
}

.generations-container {
  width: 95vw;
  margin: 0 auto;
}

ul {
  list-style-type: none;
  text-align: center;
  display: flex;
  flex-direction: column;
  justify-content: space-evenly;
  align-items: center;
}

li {
  width: 100%;
  font-size: 2rem;
  padding: 1rem;
  cursor: pointer;
  transition: 0.2 ease;
  border: solid 2px tan;
}

li:not(:last-child) {
  border-bottom: none;
}

li:hover {
  background-color: #ccc;
}

.filter-container {
  text-align: center;
  margin: 1rem 0;
}

.filter {
  width: 50%;
  border: none;
  outline: none;
  padding: 1rem;
  font-size: 1.8rem;
  border: 1px solid black;
  border-radius: 10px;
  box-shadow:0 0 1.5rem 4px rgba(0, 0, 0, 0.1);
}

.gallery {
  margin: 1rem;
  display: grid;
  justify-content: center;
  align-items: center;
  grid-template-columns: repeat(auto-fit, 25rem);
  grid-gap: 1.5rem;
}

.img-container {
  position: relative;
  background-color: #282828;
  cursor: pointer;
  box-shadow: .5rem .5rem 1rem rgba(0, 0, 0, .5);
  border-radius: 5px;
}

.img {
  width: 100%;
  display: block;
  transition: 0.2s ease;
}

/* @media only screen and (max-width: 750px) {
  .img {
    filter: brightness(80%);
} */

.img-container:hover .img {
  filter: brightness(50%);
  transform: scale(0.95);
}

.types-container {
  width: 100%;
  display: flex;
  justify-content: flex-start;
  align-items: center;
  padding: 1rem;
  font-family: "Press Start 2P", cursive;
}

.type {
  text-transform: uppercase;
  color: #fff;
  padding: .75rem 1.5rem;
  border-radius: 5px;
  margin-left: .5rem;
}

.poke-id {
  font-size: 1.4rem;
  text-transform: uppercase;
  color: #fff;
  margin-left: auto;
  margin-right: .5rem;
}

.title {
  text-align: center;
  color: #fff;
  letter-spacing: 0.5rem;
  text-transform: uppercase;
  font-size: 2.5rem;
  font-weight: 300;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  opacity: 0;
  transition: 0.5s ease-out;
}

@media only screen and (max-width: 750px) {
  .title {
    opacity: 1;
    font-weight: 400;
    z-index: 10;
  }
}

.img-container:hover .title {
  opacity: 1;
  z-index: 10;
}

.button-container {
  position: fixed;
  bottom: 1.5rem;
  left: 50%;
  transform: translate(-50%);
  z-index: 1000;
}

.button {
  font-size: 3rem;
  cursor: pointer;
  padding: .1rem 2rem .5rem 2rem;
  border: none;
  transition: all .2s ease;
  background-color: #fff8dc;
  outline: 2px solid rgba(255, 0, 0, .3);
}

.button:hover {
  opacity: .5;
}

/* POKEMON TYPE COLORS */

.normal {
  background-color: #A8A77A;
}

.fire {
  background-color: #EE8130;
}

.water {
  background-color: #6390F0;
}

.electric {
  background-color: #F7D02C;
}

.grass {
  background-color: #7AC74C;
}

.ice {
  background-color: #96D9D6;
}

.fighting {
  background-color: #C22E28;
}

.poison {
  background-color: #A33EA1;
}

.ground {
  background-color: #E2BF65;
} 

.flying {
  background-color: #A98FF3;
}

.psychic {
  background-color: #F95587;
}

.bug {
  background-color: #A6B91A;
}

.rock {
  background-color: #B6A136;
}

.ghost {
  background-color: #735797;
}

.dragon {
  background-color: #6F35FC;
}

.dark {
  background-color: #705746;
}

.steel {
  background-color: #B7B7CE;
}

.fairy {
  background-color: #D685AD;
}

/* MEDIA QUERIES */

@media only screen and (max-width: 750px) {
  .title {
    opacity: 1;
  }
}

/* ANIMATION FROM https://tobiasahlin.com/moving-letters/ */

.ml11 {
  font-weight: 700;
  font-size: 2rem;
  text-align: center;
  margin-bottom: 1.5rem;
  font-family: "Press Start 2P", cursive;
}

.ml11 .text-wrapper {
  position: relative;
  display: inline-block;
  padding-top: 0.1em;
  padding-right: 0.05em;
  padding-bottom: 0.15em;
}

/* .ml11 .line {
  opacity: 0;
  position: absolute;
  left: 0;
  height: 100%;
  width: 3px;
  background-color: #fff;
  transform-origin: 0 50%;
} */

.ml11 .line1 { 
  top: 0; 
  left: 0;
}

.ml11 .letter {
  display: inline-block;
  line-height: 1em;
}

